# drive_2023_24

./: .gitignore  .gitmodules  README.md  drive-launch-rpi.service  drive-launch.service  drive-test.service  launch-notes.txt  odrive-closed-loop.bash  odrive-config-maxon-ec45-frameless.txt  odrive-config-maxon-ec45.txt  odrive-config-maxon-ec60.txt  odrive-config-maxon.txt  odrive-config-neo-v1.1.txt  odrive-config-neos-1.1.txt  odrive-config-neos-v1.1.txt  odrive-config.txt  odrive-cyclical-config.txt  odrive-idle.bash
archive/: simple_input_publisher.py
motor-config/: odrive-config-neo-v1.1-50A.txt  odrive-config-neo-v1.1-NEWGEARBOX.txt
repo/: Rover Drive System Design.xlsx
services/orin/: drive-launch.service
src/can_interface/: __init__.py
src/drive/: package.xml  setup.py
src/drive/drive/: configure_odrive.py  controller_manager.py  input_publisher.py  motor_control_relay.py  motor_controller.py  motor_controller_manager.py  odrive_can_interface.py  odrive_can_test.py  odrive_motor_controller.py  odrive_motor_controller_manager.py  simple_input_publisher.py  spiral_driver.py
src/drive/launch/: base_drive_launch.yaml  dual_drive_launch.yaml  rover_drive_launch.yaml  spiral_drive_launch.yaml
src/py_pubsub/: setup.py
src/py_pubsub/launch/: rover_drive_launch.yaml
src/py_pubsub/py_pubsub/: client_member_function.py  configure_can.py  drive_client.py  (+8 more)
src/tests/: can-bus-init.py  can_param_access.py  can_simple.py  configure_odrive.py  configure_odrive_test.py  necessary-calls.txt  odrive-can-original.py  odrive-can.py  odrive-cansimple.dbc  temp.py
(+3 files in other folders)
