<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive</name>
  <version>0.0.0</version>
  <description>Saddleback College URC drive system</description>
  <maintainer email="supernovawarriors128@gmail.com">cameron</maintainer>
  <author>Matthew Reese</author>
  <author>Ryan Dewey</author>
  <author>Justine Le</author>
  <license>Apache License 2.0</license>

  <!-- Dependencies for node import statements -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
